package dmLuaDDF;

import "ddf/ddf_extensions.proto";
import "ddf/ddf_math.proto";

import "properties_ddf.proto";

option java_package = "com.dynamo.lua.proto";
option java_outer_classname = "Lua";

message LuaModule
{
    // For now provide both script and bytecode to support the engine build option
    // of compiling with vanilla lua.
    required bytes script                               = 1;
    optional bytes bytecode                             = 2;

    // NOTE: The following arrays must be equal in size
    repeated string modules                             = 3; // required modules
    repeated string resources                           = 4 [(resource)=true]; // required resources. same as modules but on the form /x/y/z.luac instead of x.y.z
    optional dmPropertiesDDF.PropertyDeclarations properties = 5;
}
