package dmPropertiesDDF;

import "ddf/ddf_extensions.proto";
import "ddf/ddf_math.proto";

option java_package = "com.dynamo.properties.proto";
option java_outer_classname = "PropertiesProto";

message PropertyDeclarationEntry
{
    required string key     = 1;
    required uint64 id      = 2;
    required uint32 index   = 3;
}

message PropertyDeclarations
{
    repeated PropertyDeclarationEntry   number_entries = 1;
    repeated PropertyDeclarationEntry   hash_entries = 3;
    repeated PropertyDeclarationEntry   url_entries = 5;
    repeated PropertyDeclarationEntry   vector3_entries = 7;
    repeated PropertyDeclarationEntry   vector4_entries = 9;
    repeated PropertyDeclarationEntry   quat_entries = 11;
    repeated float                      float_values = 2;
    repeated uint64                     hash_values = 4;
    repeated string                     string_values = 6;
}
